# spc-hackathon

agent/: .gitignore  pyproject.toml
agent/.langgraph_api/: .langgraph_checkpoint.3.pckl
agent/sample_agent/: agent.py  configuration.py  state.py  utils.py
agent/sample_agent.egg-info/: SOURCES.txt
agent/sample_agent/constants/: final_result.py  plan.md
agent/sample_agent/data/: asset.py  base.py
agent/sample_agent/nodes/: prebuilt.py
agent/sample_agent/tools/: media_analyze.py
docs/: langgraph-api.md
ui/: .env  .gitignore  example.env  package-lock.json  package.json  pnpm-lock.yaml
ui/agent/.langgraph_api/: .langgraph_ops.pckl
ui/app/: layout.tsx
ui/app/api/tts/: route.ts
ui/app/components/: TextToSpeech.tsx
ui/app/tts/: page.tsx
ui/app/ttstest/: page.tsx
ui/src/app/: Main.tsx  globals.css  layout.tsx  page.tsx  scene.tsx
ui/src/app/api/copilotkit/: route.ts
ui/src/app/ttstest/: page.tsx
ui/src/components/: ModelSelector.tsx
ui/src/components/configEditor/: AsssetsEditor.tsx  ContentEditor.tsx  DemoConfigEditor.tsx  ThemeEditor.tsx  VideoSequenceEditor.tsx
ui/src/components/layout/: AssetPane.tsx  ContentPane.tsx  SplitScreenLayout.tsx
ui/src/components/revid/: index.tsx  result.ts
ui/src/components/ui/: parameter-editor.tsx
ui/src/components/v2/: app-layout.tsx  asset-grid.tsx  main-content.tsx  sidebar.tsx
ui/src/constants/: demov1.jsx  demov2-params.jsx  initial.state.ts
ui/src/data/interfaces/: coagent.interface.ts
ui/src/lib/: model-selector-provider.tsx  types.ts
ui/src/lib/types/: index.ts
(+31 files in other folders)
